--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             margin: 0;
             padding: 0;
             height: 100%;
+            overflow: hidden; /* Prevent scrolling due to animation */
         }
 
         /* Make sure the container div is always square and full width */
@@ -19,28 +20,36 @@
             display: flex;
             align-items: center; /* Center items vertically */
             justify-content: center; /* Center items horizontally */
-            position: relative; /* Needed for absolute positioning of pseudo-elements */
-            background-color: black; /* Black background for VHS effect */
-            overflow: hidden; /* Hide overflow to ensure the effect stays within bounds */
-            z-index: 0; /* Ensure that VHS effect stays behind the text */
+            position: relative; /* Needed for positioning pseudo-elements */
+            background-color: black; /* Dark background for VHS effect */
+            overflow: hidden; /* Hide overflow for the pseudo-element */
         }
 
         /* Center the text */
         .square-container h1 {
             margin: 0;
             font-size: 2rem; /* Responsive text size */
-            color: #fff; /* White text color for contrast against black background */
-            z-index: 1; /* Ensure text stays on top of the VHS effect */
+            color: #fff; /* White text color for contrast */
+            font-family: 'Helvetica', 'Arial', sans-serif; /* Helvetica font with fallbacks */
+            filter: brightness(0.8) contrast(1.2) blur(1px); /* Simulate CRT effect */
+            z-index: 1; /* Ensure text is on top */
+            position: relative;
+            animation: flicker 0.1s infinite alternate; /* Flicker effect */
         }
 
-        /* VHS effect */
+        @keyframes flicker {
+            0% { transform: translateX(1px); }
+            100% { transform: translateX(-1px); }
+        }
+
+        /* VHS effect with warpy line at the bottom */
         .square-container::before {
             content: '';
             position: absolute;
-            top: 0;
+            bottom: 0;
             left: 0;
             width: 100%;
-            height: 100%;
+            height: 20px; /* Height of the warpy line */
             background: repeating-linear-gradient(
                 rgba(255, 255, 255, 0.1) 0px,
                 rgba(255, 255, 255, 0.1) 2px,
@@ -48,23 +57,19 @@
                 rgba(0, 0, 0, 0.1) 3px
             );
             background-size: 100% 5px;
-            animation: vhs-effect 2s infinite linear;
-            z-index: 0;
+            animation: warp-line 1s infinite linear; /* Warpy effect */
         }
 
-        @keyframes vhs-effect {
-            0% {
-                transform: translateY(0);
-            }
-            100% {
-                transform: translateY(-100%);
-            }
+        @keyframes warp-line {
+            0% { transform: translateY(0); }
+            50% { transform: translateY(10px); }
+            100% { transform: translateY(0); }
         }
     </style>
 </head>
 <body>
     <div class="square-container">
-        <h1>Hello, World</h1>
+        <h1>[ THE ITCH ]</h1>
     </div>
 </body>
 </html>
